--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gulp-connect": "~2.2.0",
     "gulp-open": "~0.3.2",
     "gulp-code": "1.x.x",
-    "del": "^0.1.3"
+    "del": "^0.1.3",
+    "gulp-less": "~1.2.3"
   }
 }
